<resources>
    <string name="app_name">Smart Badge</string>
    <string name="splash_title">Splash Title</string>
    <string name="splash_desc">Splash Desc</string>
    <string name="important">Important</string>
    <string name="permission_refused_info">This App cannot work without these permissions, please accept them next time !</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="pass">Password</string>
    <string name="forgot_pass">Forgot password ?</string>
    <string name="no_account">Not having account ?</string>
    <string name="create_account">Create a new one for free</string>
    <string name="x_not_should_not_empty">%1$s cannot be empty !</string>
    <string name="authentication">Authentication</string>
    <string name="wait">Please wait…</string>
    <string name="profile_name">Profile Name</string>
    <string name="profile_detail">Profile Detail</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="name_">Name</string>
    <string name="_profile_detail">: %1$s</string>
    <string name="about_">About</string>
    <string name="active_">Active</string>
    <string name="now">Now</string>
    <string name="profile_list">Profile List</string>
    <string name="title_activity_nfcidentification">NFCIdentification</string>
    <string name="title_activity_nfcpointer">NFCPointer</string>
    <string name="title_activity_nfclogin_identifiant">NFCLoginIdentifiant</string>
    <string name="title_activity_nfcapply_tag_elev">NFCApplyTagElev</string>
    <string name="title_activity_nfcapply_tag_eleve">NFCApplyTagEleve</string>
</resources>
