<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium_margin">


        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            app:fontFamily="sans-serif-condensed"
            android:text="@string/login"
            android:id="@+id/login_label"
            android:textSize="36sp" />

        <android.support.v7.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:layout_below="@+id/login_label"
            android:hint="@string/username"
            android:textAlignment="center"
            android:id="@+id/user"
            />

        <android.support.v7.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:layout_below="@+id/user"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:id="@+id/pass"
            />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/pass"
            android:textAlignment="center"
            android:foreground="?attr/selectableItemBackground"
            android:id="@+id/forgot"
            android:focusable="true"
            android:clickable="true"
            android:padding="@dimen/medium_margin"
            android:textColor="@color/colorPrimary"
            android:text="@string/forgot_pass"/>



        <android.support.v7.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/forgot"
            android:layout_marginTop="30dp"
            android:textColor="@android:color/white"
            android:background="@drawable/btn_accent_bg"
            android:text="@string/login"
            android:id="@+id/login_btn"

            android:foreground="?attr/selectableItemBackground"
            android:focusable="true"
            android:clickable="true"/>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/login_btn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/large_margin">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_account"
                android:paddingTop="@dimen/medium_margin"
                android:paddingBottom="@dimen/medium_margin"
                android:paddingStart="@dimen/medium_margin"
                android:paddingEnd="@dimen/no_margin"
                />
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_account"
                android:textColor="@color/colorPrimary"
                android:padding="@dimen/medium_margin"
                />

        </LinearLayout>

    </RelativeLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>